<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App-wide strings -->
    <string name="app_name">Rutgers</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_fragment">SingleFragmentActivity</string>
    <string name="replace_me">REPLACE</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="drawer_channels">Channels</string>
	<string name="drawer_shortcuts">Shortcuts</string>
    
	<!-- Error messages -->
    <string name="failed_load">Getting data failed. Please try again later.</string>
    <string name="failed_location">Getting location failed.</string>
    
    <!-- Bus channel -->
    <string name="bus_title">Bus</string>
    <string name="bus_all_tab">All</string>
    <string name="bus_routes_tab">Routes</string>
    <string name="bus_stops_tab">Stops</string>
    
    <string name="bus_nb_all_stops_header">New Brunswick Stops</string>
    <string name="bus_nb_all_routes_header">New Brunswick Routes</string>
    <string name="bus_nb_active_stops_header">New Brunswick Active Stops</string>
    <string name="bus_nb_active_routes_header">New Brunswick Active Routes</string>

    <string name="bus_nwk_all_stops_header">Newark Stops</string>
    <string name="bus_nwk_all_routes_header">Newark Routes</string>
    <string name="bus_nwk_active_stops_header">Newark Active Stops</string>
	<string name="bus_nwk_active_routes_header">Newark Active Routes</string>
    
    <string name="bus_nearby_active_stops_header">Nearby Active Stops</string>
    
    <string name="bus_no_nearby_stops">No stops nearby.</string>
    <string name="bus_no_active_stops">No active stops.</string>
    <string name="bus_no_active_routes">No active routes.</string>
    <string name="bus_no_configured_routes">No routes.</string>
    <string name="bus_no_configured_stops">No stops.</string>
    <string name="bus_no_predictions">No predictions available.</string>
    <string name="bus_prediction_begin">Arriving in</string>
    <string name="bus_and">" and"</string>
    <string name="bus_minute_singular">" minute."</string>
    <string name="bus_minute_plural">" minutes."</string>
    
    <!-- Places channel -->
    <string name="places_title">Places</string>
    <string name="building_search">Building Search</string>
    <string name="explain_building_search">Search for a building by typing a building name or abbreviation.</string>
    <string name="address_header">Address</string>
    <string name="description_header">Description</string>
    <string name="nearby_bus_header">Nearby Bus Stops</string>
    <string name="offices_header">Offices</string>
    <string name="building_no_header">Building Number</string>
    <string name="campus_header">Campus</string>

    <!-- Dining channel -->
    <string name="dining_title">Food</string>
    <string name="no_halls_available">No dining halls available.</string>
	
	<!-- Recreation channel -->
	<string name="rec_title">Recreation</string>
	<string name="rec_info_desk_header">Information Desk</string>
	<string name="rec_business_office_header">Business Office</string>
	<string name="rec_hours_header">Hours</string>
	<string name="rec_description_header">Description</string>
	<string name="rec_address_header">Address</string>
	
	<!-- RU-info channel -->
	<string name="ruinfo_title">RU-info</string>
	<string name="ruinfo_main_text">You can contact a helpful information assistant at RU-info with your Rutgers questions by phone, text, or email.</string>
	<string name="ruinfo_call_button">Call RU-info</string>
	<string name="ruinfo_phone_number">732&#8211;445&#8211;INFO (4636)</string>
	<string name="ruinfo_text_header">Text RU-info with your questions:</string>
	<string name="ruinfo_text_desc">To sign up for RU-info TEXT:</string>
	<string name="ruinfo_text_button">Text \'Rutgers\' to 66746</string>
	<string name="ruinfo_text_already">Or, if you have already signed up:</string>
	<string name="ruinfo_text_ruinfo">Text RU-info</string>
	<string name="ruinfo_email_desc">Email RU-info with your question:</string>
	<string name="ruinfo_email_button">Email Colonel Henry</string>
	<string name="ruinfo_email_address">colhenry@rci.rutgers.edu</string>
	
	<!-- Feedback channel -->
	<string name="feedback_title">Feedback</string>
	<string name="feedback_select_subject">Subject:</string>
	<string name="feedback_select_channel">Channel:</string>
	<string name="feedback_want_response">Want a response?</string>
	<string name="feedback_hint">Type your message</string>
	<string name="feedback_general">General Questions</string>
	<string name="feedback_help_use">Help Using Application</string>
	<string name="feedback_channel_feedback">App Channel Feedback</string>
	<string name="feedback_feature_request">App Feature Request</string>
	<string name="feedback_report_bug">Report a Bug</string>
	<string name="feedback_error">Error</string>
	<string name="feedback_success">Success</string>
	
	<string-array name="feedback_subjects">
		<item>@string/feedback_help_use</item>
		<item>@string/feedback_channel_feedback</item>
		<item>@string/feedback_feature_request</item>
		<item>@string/feedback_report_bug</item>
		<item>@string/feedback_general</item>
	</string-array>
	
	<string-array name="feedback_channels">
	    <item>@string/app_logs_title</item>
	    <item>@string/bus_title</item>
	    <item>@string/careers_title</item>
	    <item>@string/campus_status_title</item>
	    <item>@string/events_title</item>
	    <item>@string/feedback_title</item>
	    <item>@string/dining_title</item>
	    <item>@string/housing_title</item>
	    <item>@string/libraries_title</item>
	    <item>@string/myrutgers_title</item>
	    <item>@string/kiosk_title</item>
	    <item>@string/news_title</item>
	    <item>@string/ecollege_title</item>
	    <item>@string/places_title</item>
	    <item>@string/ralumni_title</item>
	    <item>@string/rec_title</item>
	    <item>@string/ruinfo_title</item>
	    <item>@string/sakai_title</item>
	    <item>@string/soc_title</item>
	    <item>@string/stud_life_title</item>
	</string-array>
	
	<!-- Other channel titles -->
	<string name="news_title">News</string>
	<string name="events_title">Events</string>
	<string name="careers_title">Career Services</string>
	<string name="soc_title">Schedule of Classes</string>
	<string name="app_logs_title">App Logs</string>
	<string name="campus_status_title">Emergency Services</string>
	<string name="housing_title">Housing &amp; Res Life</string>
	<string name="kiosk_title">NB Kiosk</string>
	<string name="libraries_title">Libraries</string>
	<string name="myrutgers_title">myRutgers</string>
	<string name="ecollege_title">Pearson eCollege</string>
	<string name="ralumni_title">R Alumni</string>
	<string name="sakai_title">Sakai</string>
	<string name="stud_life_title">Student Life</string>
	
</resources>
